# spotlight

./: CMakeLists.txt  README.md  concentric_circles_controls.cpp  concentric_circles_controls.h  door_controls.cpp  door_controls.h  grating_controls.cpp  grating_controls.h  pump_controls.cpp  pump_controls.h  salesman_experiment.cpp  salesman_experiment.h  spotlight.cpp  spotlight_controls.cpp  spotlight_controls.h
arduino/: pumps.ino
arduino/gates/: gates.ino
serial/: serial.cpp  serial.h
